--- a/pages/admin.html
+++ b/pages/admin.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-users-tab">
-            <p>Aquí van los usuarios</p>
+            <div id="users-container" class="container-fluid usersContainer"></div>
         </div>
         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-messages-tab">
             <div id="mesg-container" class="container-fluid mesgContainer">
@@ -51,7 +51,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-4">
-                <p>Subir una nueva sugerencia</p>
+                <p class="instruction">Subir una nueva sugerencia</p>
                 <div class="card">
                   <div class="card-body">
                     <form id="sugg-form">
@@ -94,28 +94,28 @@
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                   <div class="tab-pane fade show active" id="nav-videojuegos" role="tabpanel" aria-labelledby="nav-videojuegos-tab">
-                    <div id="videogames-container" class="container-fluid videogamesContainer mt-3"></div>
+                    <div id="videogames-container" class="container-fluid preferenceContainer mt-3"></div>
                   </div>
                   <div class="tab-pane fade" id="nav-lectura" role="tabpanel" aria-labelledby="nav-lectura-tab">
-                    <div id="reading-container" class="container-fluid readingContainer  mt-3"></div>
+                    <div id="reading-container" class="container-fluid preferenceContainer  mt-3"></div>
                   </div>
                   <div class="tab-pane fade" id="nav-deportes" role="tabpanel" aria-labelledby="nav-deportes-tab">
-                    <div id="sports-container" class="container-fluid sportsContainer  mt-3"></div>
+                    <div id="sports-container" class="container-fluid preferenceContainer  mt-3"></div>
                   </div>
                   <div class="tab-pane fade" id="nav-arte" role="tabpanel" aria-labelledby="nav-arte-tab">
-                    <div id="art-container" class="container-fluid artContainer  mt-3"></div>
+                    <div id="art-container" class="container-fluid preferenceContainer  mt-3"></div>
                   </div>
                   <div class="tab-pane fade" id="nav-fotografia" role="tabpanel" aria-labelledby="nav-fotografia-tab">
-                    <div id="photography-container" class="container-fluid photographyContainer  mt-3"></div>
+                    <div id="photography-container" class="container-fluid preferenceContainer  mt-3"></div>
                   </div>
                   <div class="tab-pane fade" id="nav-tecnologia" role="tabpanel" aria-labelledby="nav-tecnologia-tab">
-                    <div id="tech-container" class="container-fluid techContainer  mt-3"></div>
+                    <div id="tech-container" class="container-fluid preferenceContainer  mt-3"></div>
                   </div>
                   <div class="tab-pane fade" id="nav-astrologia" role="tabpanel" aria-labelledby="nav-astrologia-tab">
-                    <div id="astrology-container" class="container-fluid astrologyContainer  mt-3"></div>
+                    <div id="astrology-container" class="container-fluid preferenceContainer  mt-3"></div>
                   </div>
                   <div class="tab-pane fade" id="nav-anime" role="tabpanel" aria-labelledby="nav-anime-tab">
-                    <div id="anime-container" class="container-fluid animeContainer  mt-3"></div>
+                    <div id="anime-container" class="container-fluid preferenceContainer  mt-3"></div>
                   </div>
                 </div>
               </div>
