--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -24,7 +24,14 @@
 
     <div class="container-fluid p-0 min-vh-100 d-flex flex-column bg-lightblue">
         <nav class="navbar navbar-expand-lg navbar-dark bg-lightblue">
-            <a class="navbar-brand redwine" href="dashboard.html">Caléndari</a>
+          <a class="navbar-brand" href="dashboard.html">
+            <img
+              src="../img/LogoCalendari.png"
+              alt="Caléndari"
+              width="150"
+              height="80"
+            />
+          </a>
             <button class="navbar-toggler redwine" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon redwine"></span>
             </button>
