Styles added to checklist

--- a/pages/checklist.html
+++ b/pages/checklist.html
@@ -52,77 +52,94 @@
             </div>
         </div>
         <div class="col-md-8">
-            <div class="row">
-                <div class="col-sm-4 mt-5">
-                    <h3 class="text-center border-bottom-gray checklist-days">LUNES</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4 mt-5">
+                        <h3 class="text-center  checklist-days">LUNES</h3>
+                        <div class="container-checklist">
+                            <div id="newtask" class="mt-3">
+                                <form class="task-form-lunes">
+                                    <div class="form-group">
+                                        <input class="w-100" id="objetivo" type="text" placeholder="Inserta un objetivo" >
+                                    </div>
+                                </form>
+                            </div>
+                            <div id="tasks">
+                                <!-- Here goes the user's list-->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 mt-5 ">
+                        <h3 class="text-center  checklist-days">MARTES</h3>
+                        <div class="container-checklist">
+                            <div id="newtaskMartes" class="mt-3">
+                                <form class="task-form-martes">
+                                    <div class="form-group">
+                                        <input class="w-100" id="objetivo" type="text" placeholder="Inserta un objetivo" >
+                                    </div>
+                                </form>
+                            </div>
+                            <div id="tasksMartes"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 mt-5">
+                    <h3 class="text-center  checklist-days">MIÉRCOLES</h3>
                     <div class="container-checklist">
-                        <div id="newtask" class="mt-3">
-                            <form class="task-form-lunes">
-                                <input id="objetivo" type="text" placeholder="Inserta un objetivo" >
+                        <div id="newtaskMiercoles" class="mt-3">
+                            <form class="task-form-miercoles">
+                                <div class="form-group">
+                                    <input class="w-100" id="objetivo" type="text" placeholder="Inserta un objetivo" >
+                                </div>
                             </form>
                         </div>
-                        <div id="tasks">
-                            <!-- Here goes the user's list-->
-                        </div>
+                        <div id="tasksMiercoles"></div>
                     </div>
-                </div>
-                <div class="col-sm-4 mt-5 ">
-                    <h3 class="text-center border-bottom-gray checklist-days">MARTES</h3>
-                    <div class="container-checklist">
-                        <div id="newtaskMartes" class="mt-3">
-                            <form class="task-form-martes">
-                                <input type="text" placeholder="Inserta un objetivo">
-                            </form>
-                        </div>
-                        <div id="tasksMartes"></div>
-                    </div>
-                </div>
-                <div class="col-sm-4 mt-5">
-                <h3 class="text-center border-bottom-gray checklist-days">MIÉRCOLES</h3>
-                <div class="container-checklist">
-                    <div id="newtaskMiercoles" class="mt-3">
-                        <form class="task-form-miercoles">
-                            <input type="text" placeholder="Inserta un objetivo">
-                        </form>
-                    </div>
-                    <div id="tasksMiercoles"></div>
                 </div>
             </div>
             </div>
-            <div class="row">
-                <div class="col-sm-4 mt-5">
-                    <h3 class="text-center border-bottom-gray checklist-days">JUEVES</h3>
-                    <div class="container-checklist">
-                        <div id="newtaskJueves" class="mt-3">
-                            <form class="task-form-jueves">
-                                <input type="text" placeholder="Inserta un objetivo">
-                            </form>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4 mt-5">
+                        <h3 class="text-center  checklist-days">JUEVES</h3>
+                        <div class="container-checklist">
+                            <div id="newtaskJueves" class="mt-3">
+                                <form class="task-form-jueves">
+                                    <div class="form-group">
+                                        <input class="w-100" id="objetivo" type="text" placeholder="Inserta un objetivo" >
+                                    </div>
+                                </form>
+                            </div>
+                            <div id="tasksJueves"></div>
                         </div>
-                        <div id="tasksJueves"></div>
                     </div>
-                </div>
-                <div class="col-sm-4 mt-5">
-                    <h3 class="text-center border-bottom-gray checklist-days">VIERNES</h3>
-                    <div class="container-checklist">
-                        <div id="newtaskViernes" class="mt-3">
-                            <form class="task-form-viernes">
-                                <input type="text" placeholder="Inserta un objetivo">
-                            </form>
+                    <div class="col-sm-4 mt-5">
+                        <h3 class="text-center  checklist-days">VIERNES</h3>
+                        <div class="container-checklist">
+                            <div id="newtaskViernes" class="mt-3">
+                                <form class="task-form-viernes">
+                                    <div class="form-group">
+                                        <input class="w-100" id="objetivo" type="text" placeholder="Inserta un objetivo" >
+                                    </div>
+                                </form>
+                            </div>
+                            <div id="tasksViernes"></div>
                         </div>
-                        <div id="tasksViernes"></div>
                     </div>
-                </div>
-                <div class="col-sm-4 mt-5">
-                    <h3 class="text-center border-bottom-gray checklist-days">FIN DE SEMANA</h3>
-                    <div class="container-checklist">
-                        <div id="newtaskFin" class="mt-3">
-                            <form class="task-form-fin">
-                                <input type="text" placeholder="Inserta un objetivo">
-                            </form>
+                    <div class="col-sm-4 mt-5">
+                        <h3 class="text-center  checklist-days">FIN DE SEMANA</h3>
+                        <div class="container-checklist">
+                            <div id="newtaskFin" class="mt-3">
+                                <form class="task-form-fin">
+                                    <div class="form-group">
+                                        <input class="w-100" id="objetivo" type="text" placeholder="Inserta un objetivo" >
+                                    </div>
+                                </form>
+                            </div>
+                            <div id="tasksFin"></div>
                         </div>
-                        <div id="tasksFin"></div>
                     </div>
-                </div>
+            </div>
+            
             </div>
         </div>
     </div>
