--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -49,19 +49,19 @@
             </div>
             <div class="col-md-8">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 mb-4">
                         <h3 class="text-center dashboard-title">Escoge la modalidad de Caléndari</h3>
                     </div>
                 </div>
                 <div class="row mt-5 mr-1">
                     <div class="col-md-6">
-                        <h3 class="text-center dashboard-heading mb-5">
+                        <h3 class="text-center dashboard-heading mb-n3 position-relative">
                             <a class="dashboard-a" href="checklist.html">Check list</a>
                         </h3>
                         <p class="dashboard-p">Formato para visualizar tus actividades de la semana y poder marcarlas cuando las cumplas</p>
                     </div>
                     <div class="col-md-6">
-                        <h3 class="text-center dashboard-heading mb-5">
+                        <h3 class="text-center dashboard-heading mb-n3 position-relative">
                             <a class="dashboard-a" href="agenda.html">Agenda</a>
                         </h3>
                         <p class="dashboard-p">Formato tipo horario de tus actividades junto con sugerencias de entretenimiento y organización</p>
