User Auth checklist

--- a/pages/checklist.html
+++ b/pages/checklist.html
@@ -159,9 +159,11 @@
     </svg>
 </div>
     
-    <script type="module" src="../scripts/checklist.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
     <script type = "module" src="../scripts/index.js"></script>
+    <script type="module" src="../scripts/checklist.js"></script>
     <script type = "module" src="../scripts/logout.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    
 </body>
+</html>
