Links between pages corrected

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -30,7 +30,7 @@
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link redwine " href="#">Mi perfil</a>
+                <a class="nav-link redwine " href="confg.html">Mi perfil</a>
               </li>
               <form id="close-form">
                 <button type="submit" id="logout" class="btn btn-darkblue">Cerrar sesión</button>
@@ -83,5 +83,10 @@
                 </g>
             </svg>
         </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <script type = "module" src="../scripts/index.js"></script>
+    <script type = "module" src="../scripts/logout.js"></script>
 </body>
+
 </html>
