--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarsExample05">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link redwine " href="#">Mi perfil</a>
+                  <a class="nav-link redwine " href="confg.html">Mi perfil</a>
                 </li>
                 <form id="close-form">
                   <button type="submit" id="logout" class="btn btn-darkblue">Cerrar sesión</button>
