--- a/pages/checklist.html
+++ b/pages/checklist.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caléndari</title>
+    <link rel="stylesheet" href="../css/agenda.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/wavesNavbar.css"/>
@@ -12,6 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body class="bg-lightblue">
+    <div class="loader-wrapper">
+        <div id="preloader">
+            <div id="loader"></div>
+        </div>
+    </div>
     <div class="container-fluid p-0 min-vh-100 d-flex flex-column bg-lightblue">
         <nav class="navbar navbar-expand-lg navbar-dark bg-lightblue">
             <a class="navbar-brand" href="dashboard.html">
@@ -29,7 +35,7 @@
               <div class="collapse navbar-collapse" id="navbarsExample05">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link redwine " href="#">Mi perfil</a>
+                    <a class="nav-link redwine " href="confg.html">Mi perfil</a>
                   </li>
                   <form id="close-form">
                     <button type="submit" id="logout" class="btn btn-darkblue">Cerrar sesión</button>
