--- a/pages/confg.html
+++ b/pages/confg.html
@@ -116,8 +116,11 @@
         </g>
       </svg>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
     <script type="module" src="../scripts/index.js"></script>
     <script type="module" src="../scripts/main.js"></script>
     <script type="module" src="../scripts/adminSuggs.js"></script>
+    <script type = "module" src="../scripts/logout.js"></script>
   </body>
 </html>
