Admin portal added

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar principalNav">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="dashboard.html">
             <img
               src="../img/LogoCalendari.png"
               alt=""
