--- a/pages/confg.html
+++ b/pages/confg.html
@@ -61,7 +61,7 @@
               <form id="pref-form">
                 <div class="row">
                   <div class="col">
-                    <input class="preference-btn" id="videogames" type="checkbox" value="A">
+                    <input class="preference-btn" id="videogames" type="checkbox" value="Videojuegos">
                     <label for="videogames" class="px-2">
                       <img src="../img/icons8-control-50.png" alt="control" class="img-fluid">
                       <p>Videojuegos</p>
@@ -69,21 +69,21 @@
                     
                   </div>
                   <div class="col">
-                    <input id="reading" class="preference-btn" type="checkbox" value="B">
+                    <input id="reading" class="preference-btn" type="checkbox" value="Lectura">
                     <label for="reading" class="px-2">
                       <img src="../img/icons8-libro-60.png" alt="book" class="img-fluid">
                       <p>Lectura</p>
                     </label>
                   </div>
                   <div class="col">
-                    <input id="sports" class="preference-btn" type="checkbox" value="C">
+                    <input id="sports" class="preference-btn" type="checkbox" value="Deportes">
                     <label for="sports" class="px-2">
                       <img src="../img/icons8-deporte-50.png" alt="book" class="img-fluid">
                       <p>Deportes</p>
                     </label>
                   </div>
                   <div class="col">
-                    <input id="art" class="preference-btn" type="checkbox" value="D" >
+                    <input id="art" class="preference-btn" type="checkbox" value="Arte" >
                     <label for="art" class="px-2">
                       <img src="../img/icons8-paleta-de-pintura-48.png" alt="paint" class="img-fluid">
                       <p>Arte</p>
@@ -92,28 +92,28 @@
                 </div>
                 <div class="row">
                   <div class="col">
-                    <input id="camara" class="preference-btn" type="checkbox" value="E" >
+                    <input id="camara" class="preference-btn" type="checkbox" value="Fotografía" >
                     <label for="camara" class="px-2">
                       <img src="../img/icons8-cámara-60.png" alt="camara" class="img-fluid">
                       <p>Fotografía</p>
                     </label>
                   </div>
                   <div class="col">
-                    <input id="tech" class="preference-btn" type="checkbox" value="F" >
+                    <input id="tech" class="preference-btn" type="checkbox" value="Tecnología" >
                     <label for="tech" class="px-2">
                       <img src="../img/icons8-wearable-technology-60.png" alt="tech" class="img-fluid">
                       <p>Tecnología</p>
                     </label>
                   </div>
                   <div class="col">
-                    <input id="astrology" class="preference-btn" type="checkbox" value="G" >
+                    <input id="astrology" class="preference-btn" type="checkbox" value="Astrología" >
                     <label for="astrology" class="px-2">
                       <img src="../img/icons8-stargaze-50.png" alt="stars" class="img-fluid">
                       <p>Astrología</p>
                     </label>
                   </div>
                   <div class="col">
-                    <input id="anime" class="preference-btn" type="checkbox" value="H" >
+                    <input id="anime" class="preference-btn" type="checkbox" value="Anime" >
                     <label for="anime" class="px-2">
                       <img src="../img/icons8-naruto-50.png" alt="anime" class="img-fluid">
                       <p>Anime</p>
